// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accordion should display only the first item on initialisation 1`] = `
"
            <div data-toggle-accordion=\\"\\">
                <div data-toggle-name=\\"one\\"></div>
                <button data-toggle-target=\\"one\\" class=\\"is-selected\\"></button>
                <div data-toggle-name=\\"two\\" class=\\"is-hidden\\"></div>
                <button data-toggle-target=\\"two\\"></button>
            </div>
        "
`;

exports[`accordion should hide all other open elements, and toggle the element clicked 1`] = `
"
            <div data-toggle-accordion=\\"\\">
                <div data-toggle-name=\\"one\\"></div>
                <button data-toggle-target=\\"one\\" class=\\"is-selected\\"></button>
                <div data-toggle-name=\\"two\\" class=\\"is-hidden\\"></div>
                <button data-toggle-target=\\"two\\"></button>
                <div data-toggle-name=\\"three\\" class=\\"is-hidden\\"></div>
                <button data-toggle-target=\\"three\\"></button>
                <div data-toggle-name=\\"four\\" class=\\"is-hidden\\"></div>
                <button data-toggle-target=\\"four\\"></button>
            </div>
        "
`;

exports[`accordion should hide all other open elements, and toggle the element clicked 2`] = `
"
            <div data-toggle-accordion=\\"\\">
                <div data-toggle-name=\\"one\\"></div>
                <button data-toggle-target=\\"one\\" class=\\"is-selected\\"></button>
                <div data-toggle-name=\\"two\\" class=\\"is-hidden\\"></div>
                <button data-toggle-target=\\"two\\"></button>
                <div data-toggle-name=\\"three\\" class=\\"is-hidden\\"></div>
                <button data-toggle-target=\\"three\\"></button>
                <div data-toggle-name=\\"four\\" class=\\"is-hidden\\"></div>
                <button data-toggle-target=\\"four\\"></button>
            </div>
        "
`;

exports[`accordion should show first button is selected on initialisation 1`] = `
"
            <div data-toggle-accordion=\\"\\">
                <div data-toggle-name=\\"one\\"></div>
                <button data-toggle-target=\\"one\\" class=\\"is-selected\\"></button>
                <div data-toggle-name=\\"two\\" class=\\"is-hidden\\"></div>
                <button data-toggle-target=\\"two\\"></button>
            </div>
        "
`;

exports[`accordion should update the button selected class on selecting new section 1`] = `
"
            <div data-toggle-accordion=\\"\\">
                <div data-toggle-name=\\"one\\"></div>
                <button data-toggle-target=\\"one\\" class=\\"is-selected\\"></button>
                <div data-toggle-name=\\"two\\" class=\\"is-hidden\\"></div>
                <button data-toggle-target=\\"two\\"></button>
            </div>
        "
`;

exports[`handleHideAll should display only the first item on initialisation 1`] = `
"
            <div data-toggle-accordion=\\"\\">
                <div data-toggle-name=\\"one\\"></div>
                <button data-toggle-target=\\"one\\"></button>
                <div data-toggle-name=\\"two\\" class=\\"is-hidden\\"></div>
                <button data-toggle-target=\\"two\\"></button>
                <div data-toggle-name=\\"three\\" class=\\"is-hidden\\"></div>
                <button data-toggle-target=\\"three\\"></button>
                <div data-toggle-name=\\"four\\" class=\\"is-hidden\\"></div>
                <button data-toggle-target=\\"four\\"></button>
            </div>
        "
`;

exports[`handleHideAll should hide all other open elements, and toggle the element clicked 1`] = `
"
            <div data-toggle-accordion=\\"\\">
                <div data-toggle-name=\\"one\\" class=\\"is-hidden\\"></div>
                <button data-toggle-target=\\"one\\"></button>
                <div data-toggle-name=\\"two\\" class=\\"is-hidden\\"></div>
                <button data-toggle-target=\\"two\\"></button>
                <div data-toggle-name=\\"three\\" class=\\"\\"></div>
                <button data-toggle-target=\\"three\\"></button>
                <div data-toggle-name=\\"four\\" class=\\"is-hidden\\"></div>
                <button data-toggle-target=\\"four\\"></button>
            </div>
        "
`;

exports[`handleHideAll should hide all other open elements, and toggle the element clicked 2`] = `
"
            <div data-toggle-accordion=\\"\\">
                <div data-toggle-name=\\"one\\" class=\\"is-hidden\\"></div>
                <button data-toggle-target=\\"one\\"></button>
                <div data-toggle-name=\\"two\\" class=\\"\\"></div>
                <button data-toggle-target=\\"two\\"></button>
                <div data-toggle-name=\\"three\\" class=\\"is-hidden\\"></div>
                <button data-toggle-target=\\"three\\"></button>
                <div data-toggle-name=\\"four\\" class=\\"is-hidden\\"></div>
                <button data-toggle-target=\\"four\\"></button>
            </div>
        "
`;

exports[`hide adds custom class 1`] = `
"
            <div data-toggle-name=\\"test\\" class=\\"toggled\\"></div>
            <button data-toggle-target=\\"hide:test\\" data-toggle-class=\\"toggled\\"></button>
        "
`;

exports[`hide adds hidden class 1`] = `
"
            <div data-toggle-name=\\"test\\" class=\\"is-hidden\\"></div>
            <button data-toggle-target=\\"hide:test\\"></button>
        "
`;

exports[`hide can handle multiple specified targets 1`] = `
"
            <div data-toggle-name=\\"one\\" class=\\"is-hidden\\"></div>
            <div data-toggle-name=\\"two\\" class=\\"is-hidden\\"></div>
            <button data-toggle-target=\\"hide:one hide:two\\"></button>
        "
`;

exports[`hide can handle multiple targets 1`] = `
"
            <div data-toggle-name=\\"test\\" class=\\"is-hidden\\"></div>
            <div data-toggle-name=\\"test\\" class=\\"is-hidden\\"></div>
            <button data-toggle-target=\\"hide:test\\"></button>
        "
`;

exports[`hide does nothing when element is already hidden 1`] = `
"
            <div data-toggle-name=\\"test\\" class=\\"is-hidden\\"></div>
            <button data-toggle-target=\\"hide:test\\"></button>
        "
`;

exports[`mixed toggles shows and hides elements correctly 1`] = `
"
            <div data-toggle-name=\\"one\\" class=\\"is-hidden\\"></div>
            <div data-toggle-name=\\"two\\" class=\\"\\"></div>
            <div data-toggle-name=\\"three\\" class=\\"\\"></div>
            <div data-toggle-name=\\"four\\" class=\\"is-hidden\\"></div>
            <button data-toggle-target=\\"one two show:three hide:four\\"></button>
        "
`;

exports[`show can handle multiple specified targets 1`] = `
"
            <div data-toggle-name=\\"one\\" class=\\"\\"></div>
            <div data-toggle-name=\\"two\\" class=\\"\\"></div>
            <button data-toggle-target=\\"show:one show:two\\"></button>
        "
`;

exports[`show can handle multiple targets 1`] = `
"
            <div data-toggle-name=\\"test\\"></div>
            <div data-toggle-name=\\"test\\" class=\\"\\"></div>
            <button data-toggle-target=\\"show:test\\"></button>
        "
`;

exports[`show does nothing when element is already shown 1`] = `
"
            <div data-toggle-name=\\"test\\"></div>
            <button data-toggle-target=\\"show:test\\"></button>
        "
`;

exports[`show removes custom class 1`] = `
"
            <div data-toggle-name=\\"test\\" class=\\"\\"></div>
            <button data-toggle-target=\\"show:test\\" data-toggle-class=\\"toggled\\"></button>
        "
`;

exports[`show removes hidden class 1`] = `
"
            <div data-toggle-name=\\"test\\" class=\\"\\"></div>
            <button data-toggle-target=\\"show:test\\"></button>
        "
`;

exports[`toggle adds custom class when specified 1`] = `
"
            <div data-toggle-name=\\"test\\" class=\\"toggled\\"></div>
            <button data-toggle-target=\\"test\\" data-toggle-class=\\"toggled\\"></button>
        "
`;

exports[`toggle adds hidden class 1`] = `
"
            <div data-toggle-name=\\"test\\" class=\\"is-hidden\\"></div>
            <button data-toggle-target=\\"test\\"></button>
        "
`;

exports[`toggle can handle multiple specified targets 1`] = `
"
            <div data-toggle-name=\\"one\\" class=\\"\\"></div>
            <div data-toggle-name=\\"two\\" class=\\"is-hidden\\"></div>
            <button data-toggle-target=\\"one two\\"></button>
        "
`;

exports[`toggle can handle multiple targets 1`] = `
"
            <div data-toggle-name=\\"test\\" class=\\"is-hidden\\"></div>
            <div data-toggle-name=\\"test\\" class=\\"\\"></div>
            <button data-toggle-target=\\"test\\"></button>
        "
`;

exports[`toggle removes custom class when specified 1`] = `
"
            <div data-toggle-name=\\"test\\" class=\\"\\"></div>
            <button data-toggle-target=\\"test\\" data-toggle-class=\\"toggled\\"></button>
        "
`;

exports[`toggle removes hidden class 1`] = `
"
            <div data-toggle-name=\\"test\\" class=\\"\\"></div>
            <button data-toggle-target=\\"test\\"></button>
        "
`;
